--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.0.2",
+    "@ynssenem/lext": "^2.0.0",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
@@ -26,6 +30,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
