--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.0.2",
-    "@ynssenem/lext": "^2.0.0",
-    "expo": "~50.0.5",
+    "@ynssenem/lext": "^1.7.2",
+    "expo": "^50.0.0",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.6",
@@ -29,9 +29,9 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "^2.14.1",
-    "react-native-reanimated": "^3.6.2",
+    "react-native": "^0.72.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
