--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.0.2",
-    "@ynssenem/lext": "^1.7.2",
-    "expo": "^50.0.0",
+    "@ynssenem/lext": "^2.0.3",
+    "expo": "~50.0.11",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.6",
+    "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.72.6",
+    "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -40,9 +40,12 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~50.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": ">=18.17.0"
+  }
 }
